k8s/node-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-frontend
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-frontend
  template:
    metadata:
      labels:
        app: node-frontend
    spec:
      containers:
        - name: node-frontend
          image: __FRONTEND_IMAGE__
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 30
