k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: __NAMESPACE__
spec:
  selector:
    app: users-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
